--- a/omicron-web01/configs/vhosts/local.skynet.omicron.net.pl.conf
+++ b/omicron-web01/configs/vhosts/local.skynet.omicron.net.pl.conf
@@ -1,7 +1,16 @@
 <VirtualHost *:80>
-ServerName local.skynet.omicron.net.pl
-ServerAdmin webmaster@wardx.net
-DocumentRoot /var/www/html/local.skynet.omicron.net.pl
-ErrorLog ${APACHE_LOG_DIR}/error.log
-CustomLog ${APACHE_LOG_DIR}/access.log combined
+	
+	ServerName local.skynet.omicron.net.pl
+	ServerAdmin webmaster@wardx.net
+	DocumentRoot /var/www/html/local.skynet.omicron.net.pl/webroot
+	
+	<Directory /var/www/html/local.skynet.omicron.net.pl/webroot/>
+		Order Allow,Deny
+		Allow from all
+		Options Indexes FollowSymLinks
+		AllowOverride All
+	</Directory>
+	
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
