--- a/omicron-web01/configs/vhosts/local.omicron.net.pl.conf
+++ b/omicron-web01/configs/vhosts/local.omicron.net.pl.conf
@@ -1,10 +1,10 @@
 <VirtualHost *:80>
 	
-	ServerName local.skynet.omicron.net.pl
+	ServerName local.omicron.net.pl
 	ServerAdmin webmaster@wardx.net
-	DocumentRoot /var/www/html/local.skynet.omicron.net.pl/webroot
+	DocumentRoot /var/www/html/local.omicron.net.pl/webroot
 	
-	<Directory /var/www/html/local.skynet.omicron.net.pl/webroot/>
+	<Directory /var/www/html/local.omicron.net.pl/webroot/>
 		Order Allow,Deny
 		Allow from all
 		Options Indexes FollowSymLinks
