--- a/omicron-web01/configs/vhosts/000-default.conf
+++ b/omicron-web01/configs/vhosts/000-default.conf
@@ -26,6 +26,12 @@
 	# following line enables the CGI configuration for this host only
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
+	
+	<Directory /var/www/html/>
+		Options Indexes FollowSymLinks
+		AllowOverride All
+		Require all granted
+	</Directory>
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
