--- a/omicron-web03/Vagrantfile
+++ b/omicron-web03/Vagrantfile
@@ -5,40 +5,25 @@ path_prefix = "C:/";
 share_user = "www-data"
 
 # server configuration
-vm_ip_address = "192.168.33.103"
+vm_ip_address = "192.168.56.203"
 vm_name = "omicron-web03"
-gdrive_repo = path_prefix + "gdrive/Repositories"
+repo = path_prefix + "git"
 
 
 Vagrant.configure("2") do |config|
 
-	config.vm.box = "debian/jessie64"
+    config.vm.box = "debian/stretch64"
 
-	config.vm.network "private_network", ip: vm_ip_address
-	config.vm.hostname = vm_name
-	
-	#config.vm.synced_folder "#{gdrive_repo}/", "/mnt/repo", owner:"#{share_user}", group:"www-data"
-	#config.vm.synced_folder "#{gdrive_repo}/../Programy", "/mnt/storage", owner:"#{share_user}", group:"www-data"	
-	#config.vm.synced_folder '../', "/vagrant-base",owner: "vagrant", group: "vagrant"
+    config.vm.network "private_network", ip: vm_ip_address
+    config.vm.hostname = vm_name
 
-	# Provider-specific configuration so you can fine-tune various
-	# backing providers for Vagrant. These expose provider-specific options.
-	# Example for VirtualBox:
-	#
-	# config.vm.provider "virtualbox" do |vb|
-	#   # Display the VirtualBox GUI when booting the machine
-	#   vb.gui = true
-	#
-	#   # Customize the amount of memory on the VM:
-	#   vb.memory = "1024"
-	# end
-	#
-	# View the documentation for the provider you are using for more
-	# information on available options.
+    config.vm.synced_folder '../', "/vagrant-base",owner: "vagrant", group: "vagrant"
+    config.vm.synced_folder "#{repo}/", "/mnt/repo", owner:"#{share_user}", group:"www-data"
+    #config.vm.synced_folder '../', "/vagrant-base",owner: "vagrant", group: "vagrant"
 
-	# provisioning   
-	#config.vm.provision :shell, path: "provisioners/bootstrap.sh"
+    # provisioning
+    config.vm.provision :shell, path: "provisioners/bootstrap.sh"
 
-	#config.vm.provision :shell, path: "provisioners/vhosts.sh"
+    #config.vm.provision :shell, path: "provisioners/vhosts.sh"
 
 end
