New configuration for instance omicron-web03 (coldfusion server)

--- a/omicron-web03/Vagrantfile
+++ b/omicron-web03/Vagrantfile
@@ -23,7 +23,6 @@ Vagrant.configure("2") do |config|
 
     # provisioning
     config.vm.provision :shell, path: "provisioners/bootstrap.sh"
-
-    #config.vm.provision :shell, path: "provisioners/vhosts.sh"
+    config.vm.provision :shell, path: "provisioners/vhosts.sh"
 
 end
