Update for vm omicron-web00 - 20190219

--- a/omicron-web00/configs/vhosts/cakeadmin.conf
+++ b/omicron-web00/configs/vhosts/cakeadmin.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
 
-    ServerName omicron.omicron00.local
+    ServerName cakeadmin.omicron00.local
     ServerAdmin webmaster@wardx.net
-    DocumentRoot /var/www/html/omicron/webroot
+    DocumentRoot /var/www/html/cakephp-adminlte/webroot
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
