--- a/omicron-web00/configs/vhosts/feeder.conf
+++ b/omicron-web00/configs/vhosts/feeder.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
 
-    ServerName local.odin.omicron.net
+    ServerName feeder.omicron00.local
     ServerAdmin webmaster@wardx.net
-    DocumentRoot /var/www/html/odin/public
+    DocumentRoot /var/www/html/feeder/webroot
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
@@ -10,8 +10,8 @@
     <Directory />
         Options FollowSymLinks
         AllowOverride All
-            Order deny,allow
-            Deny from all
+            Order allow,deny
+            Allow from all
     </Directory>
 
 </VirtualHost>
