--- a/omicron-web00/configs/vhosts/feeder.conf
+++ b/omicron-web00/configs/vhosts/feeder.conf
@@ -7,7 +7,7 @@
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    <Directory />
+    <Directory /var/www/html/feeder/webroot/>
         Options FollowSymLinks
         AllowOverride All
             Order allow,deny
