Adding database backup and restore

--- a/omicron-web00/configs/vhosts/myweather.conf
+++ b/omicron-web00/configs/vhosts/myweather.conf
@@ -1,17 +1,24 @@
-<VirtualHost *:80>
+<VirtualHost *:443>
 
     ServerName myweather.omicron00.local
     ServerAdmin webmaster@wardx.net
-    DocumentRoot /var/www/html/myweather
+    DocumentRoot /var/www/html/myweather/vue/dist
+
+    SSLEngine on
+    SSLCertificateFile /vagrant/configs/cert/myweather.omicron00.local.cert
+    SSLCertificateKeyFile /vagrant/configs/cert/myweather.omicron00.local.key
+
+    #Redirect permanent / https://myweather.omicron00.local/
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    <Directory /var/www/html/myweather/>
+    <Directory /var/www/html/myweather/vue/dist/>
         Options FollowSymLinks
         AllowOverride All
             Order allow,deny
             Allow from all
+        Header set Access-Control-Allow-Origin "*"
     </Directory>
 
 </VirtualHost>
