--- a/omicron-web00/Vagrantfile
+++ b/omicron-web00/Vagrantfile
@@ -9,7 +9,6 @@ vm_ip_address = "192.168.56.200"
 vm_name = "omicron-web00"
 repo = path_prefix + "git"
 
-
 Vagrant.configure("2") do |config|
 
     config.vm.box = "debian/stretch64"
@@ -17,7 +16,7 @@ Vagrant.configure("2") do |config|
 	config.vm.network "private_network", ip: vm_ip_address
 	config.vm.hostname = vm_name
 
-	config.vm.synced_folder '../', "/vagrant-base",owner: "vagrant", group: "vagrant"
+	config.vm.synced_folder './', "/vagrant-dir", owner: "vagrant", group: "vagrant"
     config.vm.synced_folder "#{repo}/", "/mnt/repo", owner:"#{share_user}", group:"www-data"
 
 	# Provider-specific configuration so you can fine-tune various
