--- a/omicron-web00/Vagrantfile
+++ b/omicron-web00/Vagrantfile
@@ -35,13 +35,11 @@ Vagrant.configure("2") do |config|
 	# information on available options.
 
 	# provisioning   
-	config.vm.provision:shell, keep_color:false, path:"provisioners/bootstrap.sh"
-
+	config.vm.provision:shell, keep_color:true, path:"provisioners/bootstrap.sh"
 	config.vm.provision:shell, path: "provisioners/vhosts.sh"
 
 	#config.proxy.http     = "http://135.245.192.7:8000/"
 	#config.proxy.https    = "http://135.245.192.7:8000/"
 	#config.proxy.no_proxy = "localhost,127.0.0.1/"
-
 
 end
