--- a/omicron-web00/configs/vhosts/myweather.conf
+++ b/omicron-web00/configs/vhosts/myweather.conf
@@ -1,24 +1,37 @@
+<VirtualHost *:80>
+
+	ServerName myweather.omicron00.local
+	ServerAdmin webmaster@wardx.net
+	DocumentRoot /var/www/html/myweather/vue/dist
+
+	Redirect permanent / https://myweather.omicron00.local
+</VirtualHost>
+
 <VirtualHost *:443>
 
-    ServerName myweather.omicron00.local
-    ServerAdmin webmaster@wardx.net
-    DocumentRoot /var/www/html/myweather/vue/dist
+	ServerName myweather.omicron00.local
+	ServerAdmin webmaster@wardx.net>
+	DocumentRoot /var/www/html/myweather/vue/dist
 
-    SSLEngine on
-    SSLCertificateFile /vagrant/configs/cert/myweather.omicron00.local.cert
-    SSLCertificateKeyFile /vagrant/configs/cert/myweather.omicron00.local.key
+	SSLEngine on
+	SSLCertificateFile /vagrant/configs/cert/myweather.omicron00.local.cert
+	SSLCertificateKeyFile /vagrant/configs/cert/myweather.omicron00.local.key
 
-    #Redirect permanent / https://myweather.omicron00.local/
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+	<Directory /var/www/html/myweather/vue/dist/>
 
-    <Directory /var/www/html/myweather/vue/dist/>
-        Options FollowSymLinks
-        AllowOverride All
-            Order allow,deny
-            Allow from all
-        Header set Access-Control-Allow-Origin "*"
-    </Directory>
+		<IfModule mod_rewrite.c>
+			RewriteEngine On
+			RewriteCond %{REQUEST_FILENAME} !-f
+			RewriteRule ^ index.php [L]
+		</IfModule>
 
+		Options FollowSymLinks
+		AllowOverride All
+			Order allow,deny
+			Allow from all
+	</Directory>
 </VirtualHost>
+
