--- a/omicron-web00/configs/vhosts/omicron.conf
+++ b/omicron-web00/configs/vhosts/omicron.conf
@@ -1,17 +1,24 @@
 <VirtualHost *:80>
 
-    ServerName omicron.omicron00.local
-    ServerAdmin webmaster@wardx.net
-    DocumentRoot /var/www/html/omicron/webroot
+	ServerName omicron.omicron00.local
+	ServerAdmin webmaster@wardx.net
+	DocumentRoot /var/www/html/omicron
 
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    <Directory /var/www/html/omicron/webroot/>
-        Options FollowSymLinks
-        AllowOverride All
-            Order allow,deny
-            Allow from all
-    </Directory>
+	<Directory /var/www/html/omicron/>
 
+		<IfModule mod_rewrite.c>
+			RewriteEngine On
+			RewriteCond %{REQUEST_FILENAME} !-f
+			RewriteRule ^ index.php [L]
+		</IfModule>
+
+		Options FollowSymLinks
+		AllowOverride All
+			Order allow,deny
+			Allow from all
+	</Directory>
 </VirtualHost>
+
