--- a/omicron-web01/Vagrantfile
+++ b/omicron-web01/Vagrantfile
@@ -5,20 +5,21 @@ path_prefix = "C:/";
 share_user = "www-data"
 
 # server configuration
-vm_ip_address = "192.168.33.101"
-vm_name = "omicron-web01"
-gdrive_repo = path_prefix + "gdrive/Repositories"
-
+vm_ip_address = "192.168.56.200"
+vm_name = "omicron-web00"
+repo = path_prefix + "git"
 
 Vagrant.configure("2") do |config|
 
-	config.vm.box = "debian/jessie64"
+    config.vm.box = "debian/stretch64"
 
 	config.vm.network "private_network", ip: vm_ip_address
 	config.vm.hostname = vm_name
 
-	config.vm.synced_folder "#{gdrive_repo}/", "/mnt/repo", owner:"#{share_user}", group:"www-data"	
-	config.vm.synced_folder '../', "/vagrant-base",owner: "vagrant", group: "vagrant"
+    config.vbguest.auto_update = false
+
+	config.vm.synced_folder './', "/vagrant-dir", owner: "vagrant", group: "vagrant"
+    config.vm.synced_folder "#{repo}/", "/mnt/repo", owner:"#{share_user}", group:"www-data"
 
 	# Provider-specific configuration so you can fine-tune various
 	# backing providers for Vagrant. These expose provider-specific options.
@@ -36,8 +37,7 @@ Vagrant.configure("2") do |config|
 	# information on available options.
 
 	# provisioning   
-	config.vm.provision :shell, path: "provisioners/bootstrap.sh"
-
-	config.vm.provision :shell, path: "provisioners/vhosts.sh"
+	#config.vm.provision:shell, keep_color:true, path:"provisioners/bootstrap.sh"
+	#config.vm.provision:shell, path: "provisioners/vhosts.sh"
 
 end
