Simplification of the Vagrantfile and other minor changes

--- a/omicron-web00/configs/vhosts/omicron.conf
+++ b/omicron-web00/configs/vhosts/omicron.conf
@@ -2,12 +2,12 @@
 
 	ServerName omicron.omicron00.local
 	ServerAdmin webmaster@wardx.net
-	DocumentRoot /var/www/html/omicron
+	DocumentRoot /var/www/html/omicron/
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-	<Directory /var/www/html/omicron/>
+	<Directory /var/www/html/omicron//>
 
 		<IfModule mod_rewrite.c>
 			RewriteEngine On
