Update for omicron-web00

--- a/omicron-web00/Vagrantfile
+++ b/omicron-web00/Vagrantfile
@@ -1,7 +1,7 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-path_prefix = "C:/";
+path_prefix = "/";
 share_user = "www-data"
 
 # server configuration
